src/objects/Candidate_Path__c.object
<CustomObject>
    <fields>
        <fullName>Candidate_Email__c</fullName>
        <label>Candidate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <formula>Step_Count__c =  Steps_Completed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Attempt_Time__c</fullName>
        <label>Last Attempt Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <formula>Steps_Completed__c / Step_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Step_Count__c</fullName>
        <label>Step Count</label>
        <summaryForeignKey>Candidate_Step__c.Candidate_Path__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Steps_Completed__c</fullName>
        <label>Steps Completed</label>
        <summaryFilterItems>
            <field>Candidate_Step__c.Complete__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Candidate_Step__c.Candidate_Path__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Training_Path__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Training Path</label>
        <referenceTo>Training_Path__c</referenceTo>
        <relationshipLabel>Candidate Paths</relationshipLabel>
        <relationshipName>Candidate_Paths</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Candidate Path</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Candidate Path Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Paths</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>